Source/WebCore/dom/ElementAttributeData.h
@@ -89,19 +89,22 @@ protected:
         : m_isMutable(true)
         , m_arraySize(0)
         , m_presentationAttributeStyleIsDirty(false)
+        , m_styleAttributeIsDirty(false)
     { }
 
     ElementAttributeData(unsigned arraySize)
         : m_isMutable(false)
         , m_arraySize(arraySize)
         , m_presentationAttributeStyleIsDirty(false)
+        , m_styleAttributeIsDirty(false)
     { }
 
     ElementAttributeData(const ElementAttributeData&, bool isMutable);
 
     unsigned m_isMutable : 1;
-    unsigned m_arraySize : 30;
+    unsigned m_arraySize : 29;
     mutable unsigned m_presentationAttributeStyleIsDirty : 1;
+    mutable unsigned m_styleAttributeIsDirty : 1;
 
     mutable RefPtr<StylePropertySet> m_inlineStyle;
     mutable RefPtr<StylePropertySet> m_presentationAttributeStyle;
